Update odoo16 files

--- a/gts_whatsapp/views/connections.xml
+++ b/gts_whatsapp/views/connections.xml
@@ -22,9 +22,9 @@
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button string="Login" class="oe_stat_button" icon="fa-user" name="login" type="object"/>
-                        <button string="Logout" class="oe_stat_button" icon="oi-close" name="logout" type="object"/>
-                        <button string="Set as Default" class="oe_stat_button" icon="fa-server" help="If you click this button, This will become the default automatically selected connection" name="set_as_default_connection" type="object"/>
-                        <button string="Check Status" class="oe_stat_button" icon="fa-rotate-right" help="If you click this button, It will detect if you are logged in or not. And it also updates 'Requests Left Today'" name="check_status" type="object"/>
+                        <button string="Logout" class="oe_stat_button" icon="fa-trash" name="logout" type="object"/>
+                        <button string="Set Default" class="oe_stat_button" icon="fa-server" help="If you click this button, This will become the default automatically selected connection" name="set_as_default_connection" type="object"/>
+                        <button string="Status" class="oe_stat_button" icon="fa-rotate-right" help="If you click this button, It will detect if you are logged in or not. And it also updates 'Requests Left Today'" name="check_status" type="object"/>
                     </div>
 
                     <group>
