--- a/gts_whatsapp_pos/static/src/scss/style.scss
+++ b/gts_whatsapp_pos/static/src/scss/style.scss
@@ -1,40 +1,76 @@
 .receipt-screen {
     .default-view .actions .send-whatsapp {
         display: flex;
-        margin-top: -15px !important;
 
         .input-whatsapp {
             display: flex;
             flex: 1;
             background: white;
-            border-top-left-radius: 0.25rem !important;
-            border-bottom-left-radius: 0.25rem !important;
-            border: none;
+            border: solid 1px #c8c8c8 !important;
+            margin-top: 16px;
+            border-radius: 0px;
         }
 
         input {
             flex: 1;
             padding-left: 1rem;
-            border-top-left-radius: 0.25rem !important;
-            border-bottom-left-radius: 0.25rem !important;
-            border: solid 1px rgb(206, 212, 218);
+            border: none;
             color: $gray-700;
+            border-radius: 0px !important;
         }
 
         input:focus {
-            outline: none !important;
-            border: solid 1px $primary !important;
-        }
-
-        input:focus + button.highlight {
-            -webkit-box-shadow: inset 5px 0px 0px 0px lighten(rgba(113, 99, 158, 1), 10%) !important;
-            -moz-box-shadow: inset 5px 0px 0px 0px lighten(rgba(113, 99, 158, 1), 10%) !important;
-            box-shadow: inset 5px 0px 0px 0px lighten(rgba(113, 99, 158, 1), 10%) !important;
+            outline: none;
         }
 
         button {
             &.send {
-                padding: 1rem 44px;
+                padding: 16px 35.5px;
+                margin: 2px;
+
+                border: none;
+
+                background: rgb(248, 249, 250);
+                color: $gray-500;
+
+                &:not(.highlight) {
+                    cursor: not-allowed;
+                }
+
+                &.highlight {
+                    color: white;
+                    background-color: $primary;
+                }
+            }
+
+            i {
+                width: 25px;
+            }
+        }
+    }
+
+    .whatsapp-notice {
+        margin-top: 6px;
+        display: flex;
+
+        .send-whatsapp-info {
+            width: 100%;
+            text-align: right;
+            font-style: italic;
+        }
+
+        .failed {
+            color: rgb(168, 89, 89);
+        }
+
+        .successful {
+            color: $primary;
+        }
+    }
+}
+
+        button {
+            &.send {
 
                 border: none;
                 border-top-right-radius: 0.25rem;
